@@ -22,7 +22,7 @@ import java.util.List;
  */
 public class FoldCollapser {
 
-	private List typesToCollapse;
+	private List<Integer> typesToCollapse;
 
 
 	/**
@@ -41,7 +41,7 @@ public class FoldCollapser {
 	 * @see FoldType
 	 */
 	public FoldCollapser(int typeToCollapse) {
-		typesToCollapse = new ArrayList();
+		typesToCollapse = new ArrayList<Integer>(3);
 		addTypeToCollapse(typeToCollapse);
 	}
 
@@ -52,7 +52,7 @@ public class FoldCollapser {
 	 * @param typeToCollapse The type of fold to collapse.
 	 */
 	public void addTypeToCollapse(int typeToCollapse) {
-		typesToCollapse.add(new Integer(typeToCollapse));
+		typesToCollapse.add(Integer.valueOf(typeToCollapse));
 	}
 
 
@@ -94,8 +94,8 @@ public class FoldCollapser {
 	 */
 	public boolean getShouldCollapse(Fold fold) {
 		int type = fold.getFoldType();
-		for (int i=0; i<typesToCollapse.size(); i++) {
-			if (type==((Integer)typesToCollapse.get(i)).intValue()) {
+		for (Integer typeToCollapse : typesToCollapse) {
+			if (type==typeToCollapse.intValue()) {
 				return true;
 			}
 		}
